--- a/MessageBoard/Views/Shared/_MyLayout.cshtml
+++ b/MessageBoard/Views/Shared/_MyLayout.cshtml
@@ -15,9 +15,9 @@
         <div class="layui-header">
             <ul class="layui-nav layui-bg-cyan">
                 <li class="layui-nav-item"><a href="">在线留言本</a></li>
-                <li class="layui-nav-item"><a href="">产品</a></li>
+                @*<li class="layui-nav-item"><a href="">产品</a></li>
                 <li class="layui-nav-item"><a href="">大数据</a></li>
-                <li class="layui-nav-item"><a href="">社区</a></li>
+                <li class="layui-nav-item"><a href="">社区</a></li>*@
             </ul>
             <ul class="layui-nav layui-layout-right layui-bg-cyan">
                 <li class="layui-nav-item"><a href="/User/Login">登陆</a></li>
