--- a/MessageBoard/Views/Home/Index.cshtml
+++ b/MessageBoard/Views/Home/Index.cshtml
@@ -4,16 +4,16 @@
     Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
-
 <div style="padding: 15px;">
     <div class="layui-container">
         <div class="layui-row">
             <div class="fly-panel" style="margin-bottom: 0;">
                 <ul class="fly-list">
-                    @foreach (var item in Model){
+                    @foreach (var item in Model)
+                    {
                         <li>
                             <h2>
-                                <a href="detail.html">@item.TopicTitle</a>
+                                <a href="/Message/Index/@item.TopicId">@item.TopicTitle</a>
                             </h2>
                             <div class="fly-list-info">
                                 <a href="user/home.html" link>
