--- a/MessageBoard/Views/Message/Edit.cshtml
+++ b/MessageBoard/Views/Message/Edit.cshtml
@@ -1,36 +1,29 @@
-﻿@model MessageBoard.Models.Topic
+﻿@model MessageBoard.Models.Message
 @{
-    ViewBag.Title = "编辑主题";
+    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_MyLayout2.cshtml";
 }
+
 
 <div class="layui-container fly-marginTop">
     <div class="fly-panel" pad20 style="padding-top: 5px;">
         <div class="layui-form layui-form-pane">
             <div class="layui-tab layui-tab-brief" lay-filter="user">
                 <ul class="layui-tab-title">
-                    <li class="layui-this">编辑留言主题</li>
+                    <li class="layui-this">编辑留言</li>
                 </ul>
                 <div class="layui-form layui-tab-content" id="LAY_ucm" style="padding: 20px 0;">
                     <div class="layui-tab-item layui-show">
-                        <form action="/Topic/Edit" method="post">
-                            <input type="hidden" name="TopicId" value="@Model.TopicId" />
+                        <form action="/Message/Edit" method="post">
+                            <input type="hidden" name="MessageId" value="@Model.MessageId" />
                             <input type="hidden" name="UserId" value="@Model.UserId" />
+                            <input type="hidden" name="TopicId" value="@Model.TopicId" />
                             <input type="hidden" name="CreateTime" value="@Model.CreateTime" />
-
                             <div class="layui-row layui-col-space15 layui-form-item">
                                 <div class="layui-col-md9">
-                                    <label class="layui-form-label">标题</label>
+                                    <label class="layui-form-label">留言内容</label>
                                     <div class="layui-input-block">
-                                        <input type="text" name="TopicTitle" required lay-verify="required" autocomplete="off" class="layui-input" value="@Model.TopicTitle">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="layui-row layui-col-space15 layui-form-item">
-                                <div class="layui-col-md9">
-                                    <label class="layui-form-label">详细描述</label>
-                                    <div class="layui-input-block">
-                                        <input type="text" name="TopicDescription" required lay-verify="required" placeholder="详细描述" autocomplete="off" class="layui-input" value="@Model.TopicDescription">
+                                        <input type="text" name="MessageContent" required lay-verify="required" placeholder="留言内容" autocomplete="off" class="layui-input" value="@Model.MessageContent">
                                     </div>
                                 </div>
                             </div>
