修改模板 添加登出

--- a/MessageBoard/Views/Reply/Create.cshtml
+++ b/MessageBoard/Views/Reply/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_MyLayout2.cshtml";
+    Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
 <div class="layui-container fly-marginTop">
