--- a/MessageBoard/Views/Reply/MyReply.cshtml
+++ b/MessageBoard/Views/Reply/MyReply.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MessageBoard.Models.Reply>
 @{
     ViewBag.Title = "MyReply";
-    Layout = "~/Views/Shared/_MyLayout2.cshtml";
+    Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
 <div style="padding: 15px;">
