--- a/MessageBoard/Views/Topic/Create.cshtml
+++ b/MessageBoard/Views/Topic/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "添加留言主题";
-    Layout = "~/Views/Shared/_MyLayout2.cshtml";
+    Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
 <div class="layui-container fly-marginTop">
