--- a/MessageBoard/Views/User/Detail.cshtml
+++ b/MessageBoard/Views/User/Detail.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "个人信息";
-    Layout = "~/Views/Shared/_MyLayout2.cshtml";
+    Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
 <div style="padding: 15px;">
