--- a/MessageBoard/Views/Message/Edit.cshtml
+++ b/MessageBoard/Views/Message/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MessageBoard.Models.Message
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_MyLayout2.cshtml";
+    Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
 
