--- a/MessageBoard/Views/Message/Index.cshtml
+++ b/MessageBoard/Views/Message/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_MyLayout2.cshtml";
+    Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
 <div style="padding: 15px;">
