--- a/MessageBoard/Views/Message/MyMessage.cshtml
+++ b/MessageBoard/Views/Message/MyMessage.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MessageBoard.Models.Message>
 @{
     ViewBag.Title = "MyMessage";
-    Layout = "~/Views/Shared/_MyLayout2.cshtml";
+    Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
 
