--- a/MessageBoard/Views/Reply/Edit.cshtml
+++ b/MessageBoard/Views/Reply/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MessageBoard.Models.Reply
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_MyLayout2.cshtml";
+    Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
 <div class="layui-container fly-marginTop">
