--- a/MessageBoard/Views/Topic/Edit.cshtml
+++ b/MessageBoard/Views/Topic/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MessageBoard.Models.Topic
 @{
     ViewBag.Title = "编辑主题";
-    Layout = "~/Views/Shared/_MyLayout2.cshtml";
+    Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
 <div class="layui-container fly-marginTop">
