--- a/MessageBoard/Views/Topic/MyTopic.cshtml
+++ b/MessageBoard/Views/Topic/MyTopic.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MessageBoard.Models.Topic>
 @{
     ViewBag.Title = "我的留言主题";
-    Layout = "~/Views/Shared/_MyLayout2.cshtml";
+    Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
 
 <div style="padding: 15px;">
