--- a/MessageBoard/Views/Home/Index.cshtml
+++ b/MessageBoard/Views/Home/Index.cshtml
@@ -1,12 +1,22 @@
-﻿@model IEnumerable<MessageBoard.Models.Topic>
+﻿@model PagedList.IPagedList<MessageBoard.Models.Topic>
+@using PagedList.Mvc;
 @{
     ViewBag.Title = "在线留言本";
     Layout = "~/Views/Shared/_MyLayout.cshtml";
 }
+<link href="~/Content/PagedList.css" rel="stylesheet" />
 
 <div style="padding: 15px;">
     <div class="layui-container">
         <div class="layui-row">
+            <div class="layui-row" style="background-color:#393D49;padding:10px 20px;">
+                <div style="float:left;">
+                    <h2 style="color:#c2c2c2;">留言主题</h2>
+                </div>
+                <div style="float:right;">
+                    <a class="layui-btn" href="/Topic/Create">添加主题</a>
+                </div>
+            </div>
             <div class="fly-panel" style="margin-bottom: 0;">
                 <ul class="fly-list">
                     @foreach (var item in Model)
@@ -25,7 +35,9 @@
                     }
                 </ul>
             </div>
+            @Html.PagedListPager(Model, page => Url.Action("Index", new { page }), PagedListRenderOptions.OnlyShowFivePagesAtATime)
         </div>
 
     </div>
 </div>
+
