--- a/MessageBoard/Views/User/Detail.cshtml
+++ b/MessageBoard/Views/User/Detail.cshtml
@@ -9,7 +9,10 @@
     <div class="layui-row">
         <div class="layui-col-md-offset4 layui-col-md4">
             <div class="layui-card">
-                <div class="layui-card-header layui-bg-black">个人信息</div>
+                <div class="layui-card-header layui-bg-black">
+                    <h2 style="float:left;">个人信息</h2>
+                    <a class="layui-btn" style="float:right;margin-top:2px;" href="/User/Edit/@Model.UserId">修改信息</a>
+                </div>
                 <div class="layui-card-body">
                     <table class="layui-table">
                         <colgroup>
@@ -40,9 +43,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="layui-row">
-                    <a class="layui-btn layui-btn-radius" href="/User/Edit/@Model.UserId">修改个人信息</a>
-                </div>
+                
             </div>
         </div>
     </div>
