--- a/MessageBoard/Views/Shared/_MyLayout.cshtml
+++ b/MessageBoard/Views/Shared/_MyLayout.cshtml
@@ -29,7 +29,7 @@
             else
             {
                 <ul class="layui-nav layui-bg-cyan">
-                    <li class="layui-nav-item"><a href="">在线留言本</a></li>
+                    <li class="layui-nav-item"><a href="/Home/Index">在线留言本</a></li>
                 </ul>
                 <ul class="layui-nav layui-layout-right layui-bg-cyan">
                     <li class="layui-nav-item"><a href="/User/Login">登陆</a></li>
